--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-## Êı¾İ¿âÅäÖÃ
+## æ•°æ®åº“é…ç½®
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
@@ -6,44 +6,44 @@ spring:
     url: jdbc:mysql://10.10.10.164/warn?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: bdmc
     password: bdmc@oa_maria!23
-    ##  Hikari Á¬½Ó³ØÅäÖÃ ------ ÏêÏ¸ÅäÖÃÇë·ÃÎÊ£ºhttps://github:com/brettwooldridge/HikariCP
+    ##  Hikari è¿æ¥æ± é…ç½® ------ è¯¦ç»†é…ç½®è¯·è®¿é—®ï¼šhttps://github:com/brettwooldridge/HikariCP
     hikari:
-      ## ×îĞ¡¿ÕÏĞÁ¬½ÓÊıÁ¿
+      ## æœ€å°ç©ºé—²è¿æ¥æ•°é‡
       minimum-idle: 5
-      ## ¿ÕÏĞÁ¬½Ó´æ»î×î´óÊ±¼ä£¬Ä¬ÈÏ600000£¨10·ÖÖÓ£©
+      ## ç©ºé—²è¿æ¥å­˜æ´»æœ€å¤§æ—¶é—´ï¼Œé»˜è®¤600000ï¼ˆ10åˆ†é’Ÿï¼‰
       idle-timeout: 180000
-      ## Á¬½Ó³Ø×î´óÁ¬½ÓÊı£¬Ä¬ÈÏÊÇ10
+      ## è¿æ¥æ± æœ€å¤§è¿æ¥æ•°ï¼Œé»˜è®¤æ˜¯10
       maximum-pool-size: 10
-      ## ´ËÊôĞÔ¿ØÖÆ´Ó³Ø·µ»ØµÄÁ¬½ÓµÄÄ¬ÈÏ×Ô¶¯Ìá½»ĞĞÎª,Ä¬ÈÏÖµ£ºtrue
+      ## æ­¤å±æ€§æ§åˆ¶ä»æ± è¿”å›çš„è¿æ¥çš„é»˜è®¤è‡ªåŠ¨æäº¤è¡Œä¸º,é»˜è®¤å€¼ï¼štrue
       auto-commit: true
-      ## Á¬½Ó³ØÄ¸×Ó
+      ## è¿æ¥æ± æ¯å­
       pool-name: MyHikariCP
-      ## ´ËÊôĞÔ¿ØÖÆ³ØÖĞÁ¬½ÓµÄ×î³¤ÉúÃüÖÜÆÚ£¬Öµ0±íÊ¾ÎŞÏŞÉúÃüÖÜÆÚ£¬Ä¬ÈÏ1800000¼´30·ÖÖÓ
+      ## æ­¤å±æ€§æ§åˆ¶æ± ä¸­è¿æ¥çš„æœ€é•¿ç”Ÿå‘½å‘¨æœŸï¼Œå€¼0è¡¨ç¤ºæ— é™ç”Ÿå‘½å‘¨æœŸï¼Œé»˜è®¤1800000å³30åˆ†é’Ÿ
       max-lifetime: 1800000
-      ## Êı¾İ¿âÁ¬½Ó³¬Ê±Ê±¼ä,Ä¬ÈÏ30Ãë£¬¼´30000
+      ## æ•°æ®åº“è¿æ¥è¶…æ—¶æ—¶é—´,é»˜è®¤30ç§’ï¼Œå³30000
       connection-timeout: 30000
       connection-test-query: SELECT 1
-  # REDIS Á¬½Ó³ØÅäÖÃ
+  # REDIS è¿æ¥æ± é…ç½®
   redis:
-    # RedisÊı¾İ¿âË÷Òı£¨Ä¬ÈÏÎª0£©
+    # Redisæ•°æ®åº“ç´¢å¼•ï¼ˆé»˜è®¤ä¸º0ï¼‰
     database: 0
-    # Redis·şÎñÆ÷µØÖ·
+    # RedisæœåŠ¡å™¨åœ°å€
     host: 10.10.10.164
-    # Redis·şÎñÆ÷Á¬½Ó¶Ë¿Ú
+    # RedisæœåŠ¡å™¨è¿æ¥ç«¯å£
     port: 6379
-    # Redis·şÎñÆ÷Á¬½ÓÃÜÂë£¨Ä¬ÈÏÎª¿Õ£©
+    # RedisæœåŠ¡å™¨è¿æ¥å¯†ç ï¼ˆé»˜è®¤ä¸ºç©ºï¼‰
     password: qwertyuiop
-    # Á¬½Ó³¬Ê±Ê±¼ä£¨ºÁÃë£©
+    # è¿æ¥è¶…æ—¶æ—¶é—´ï¼ˆæ¯«ç§’ï¼‰
     timeout: 0
     lettuce:
       pool:
-        # Á¬½Ó³Ø×î´óÁ¬½ÓÊı£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓĞÏŞÖÆ£©
+        # è¿æ¥æ± æœ€å¤§è¿æ¥æ•°ï¼ˆä½¿ç”¨è´Ÿå€¼è¡¨ç¤ºæ²¡æœ‰é™åˆ¶ï¼‰
         max-active: 8
-        # Á¬½Ó³Ø×î´ó×èÈûµÈ´ıÊ±¼ä£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓĞÏŞÖÆ£©
+        # è¿æ¥æ± æœ€å¤§é˜»å¡ç­‰å¾…æ—¶é—´ï¼ˆä½¿ç”¨è´Ÿå€¼è¡¨ç¤ºæ²¡æœ‰é™åˆ¶ï¼‰
         max-wait: -1
-        # Á¬½Ó³ØÖĞµÄ×î´ó¿ÕÏĞÁ¬½Ó
+        # è¿æ¥æ± ä¸­çš„æœ€å¤§ç©ºé—²è¿æ¥
         max-idle: 8
-        # Á¬½Ó³ØÖĞµÄ×îĞ¡¿ÕÏĞÁ¬½Ó
+        # è¿æ¥æ± ä¸­çš„æœ€å°ç©ºé—²è¿æ¥
         min-idle: 0
   jackson:
     default-property-inclusion: non_null
@@ -53,7 +53,7 @@ spring:
     multipart:
       max-file-size: 500MB
       max-request-size: 10MB
-# mybatis ÅäÖÃ
+# mybatis é…ç½®
 mybatis:
   mapper-locations: classpath:mapper/**/*Mapper.xml
 
