--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,7 @@ spring:
     # Redis服务器连接密码（默认为空）
     password: qwertyuiop
     # 连接超时时间（毫秒）
-    timeout: 0
+    timeout: 5000
     lettuce:
       pool:
         # 连接池最大连接数（使用负值表示没有限制）
@@ -44,7 +44,7 @@ spring:
         # 连接池中的最大空闲连接
         max-idle: 8
         # 连接池中的最小空闲连接
-        min-idle: 0
+        min-idle: 8
   jackson:
     default-property-inclusion: non_null
     date-format: yyyy-MM-dd HH:mm:ss
@@ -60,3 +60,11 @@ mybatis:
 server:
   port: 8888
   max-http-header-size: 1048576
+
+# 自定义配置
+six:
+  active: dev
+  avatar: https://wpimg.wallstcn.com/f778738c-e4f8-4870-b634-56703b4acafe.gif?imageView2/1/w/80/h/80
+  fast-url: http://10.10.10.164/
+  # 负责人的角色ID
+  role-lead-id: 4
