--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <version>2.9.2</version>
         </dependency>
         <dependency>
+            <groupId>com.github.tobato</groupId>
+            <artifactId>fastdfs-client</artifactId>
+            <version>1.26.2</version>
+        </dependency>
+        <dependency>
             <groupId>eu.bitwalker</groupId>
             <artifactId>UserAgentUtils</artifactId>
             <version>1.21</version>
